--- a/views/index.mustache
+++ b/views/index.mustache
@@ -6,17 +6,10 @@
 
 	<!-- Document Wrapper
 	============================================= -->
+	<div class='fadeToBlack'>
+
+	</div>
 	<div id="wrapper" class="clearfix">
-
-		<section id="slider" class="slider-element slider-parallax full-screen with-header force-full-screen clearfix">
-
-			<div class="slider-parallax-inner">
-				<div class="full-screen force-full-screen" style="background: url('art_imgs/background/main.jpg') center center no-repeat; background-size: cover;">
-
-				</div>
-			</div>
-
-		</section>
 
     {{> nav }}
 
@@ -24,44 +17,12 @@
 
 		<!-- Content
 		============================================= -->
-		<section id="content">
+		<section id="content" style="z-index: 2;">
 
 			<div class="content-wrap nopadding">
 
-				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/nobody.jpg');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-					<!-- <div class="vertical-middle">
-						<div class="container clearfix">
+				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/main.jpg');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 
-							<div class="row">
-
-								<div class="col-lg-3 bottommargin-sm center" data-animate="bounceIn">
-									<i class="i-plain i-xlarge divcenter nobottommargin icon-code"></i>
-									<div class="counter counter-large counter-lined"><span data-from="100" data-to="846" data-refresh-interval="50" data-speed="2000"></span>K+</div>
-									<h5>Lines of Codes</h5>
-								</div>
-
-								<div class="col-lg-3 bottommargin-sm center" data-animate="bounceIn" data-delay="200">
-									<i class="i-plain i-xlarge divcenter nobottommargin icon-magic"></i>
-									<div class="counter counter-large counter-lined"><span data-from="3000" data-to="15360" data-refresh-interval="100" data-speed="2500"></span>+</div>
-									<h5>KBs of HTML Files</h5>
-								</div>
-
-								<div class="col-lg-3 bottommargin-sm center" data-animate="bounceIn" data-delay="400">
-									<i class="i-plain i-xlarge divcenter nobottommargin icon-file-text"></i>
-									<div class="counter counter-large counter-lined"><span data-from="10" data-to="386" data-refresh-interval="25" data-speed="3500"></span>*</div>
-									<h5>No. of Templates</h5>
-								</div>
-
-								<div class="col-lg-3 bottommargin-sm center" data-animate="bounceIn" data-delay="600">
-									<i class="i-plain i-xlarge divcenter nobottommargin icon-time"></i>
-									<div class="counter counter-large counter-lined"><span data-from="60" data-to="1200" data-refresh-interval="30" data-speed="2700"></span>+</div>
-									<h5>Hours of Coding</h5>
-								</div>
-
-							</div>
-
-						</div>
-					</div> -->
 				</div>
         <!--  aDD DYSNAMIC BACKGROUND IMAGES-->
         <div class="section nomargin noborder custom-theme-1">
@@ -73,55 +34,19 @@
            be cut out or covered up.</h2>
 					</div>
 				</div>
-				<div class="section parallax full-screen nomargin noborder cover" style="background-image: url('art_imgs/background/ds2a.png');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-					<!-- <div class="vertical-middle">
-						<div class="container clearfix">
+				<div class="section parallax full-screen nomargin noborder cover" style="background-image: url('art_imgs/background/nobody.jpg');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+					<!-- <div class="container center clearfix">
 
-							<div class="col_three_fifth nobottommargin">
-
-								<div class="emphasis-title custom-theme-1">
-									<h2>Seriously Parallaxical</h2>
-									<p class="lead topmargin-sm">Create beautiful unlimited full-screen parallax defined backgrounds to spell bound your visitors.</p>
-								</div>
-
-							</div>
-
+						<div class="emphasis-title">
+							<h2>Perfect tool for Customization</h2>
+							<p class="lead topmargin-sm">Create as much unique content as you want with this Template which has powerful &amp; optimized code.</p>
 						</div>
+
+						<a href="#" class="button button-border button-rounded button-light button-large">Start Browsing</a>
+						<a href="#" class="button button-rounded button-white button-light button-large">Buy Now</a>
 					</div> -->
 				</div>
-
-				<!-- <div class="row nopadding common-height">
-
-					<div class="col-lg-4 dark col-padding ohidden" style="background-color: #1abc9c;">
-						<div>
-							<h3 class="uppercase" style="font-weight: 600;">Why choose Us</h3>
-							<p style="line-height: 1.8;">Transform, agency working families thinkers who make change happen communities. Developing nations legal aid public sector our ambitions future aid The Elders economic security Rosa.</p>
-							<a href="#" class="button button-border button-light button-rounded uppercase nomargin">Read More</a>
-							<i class="icon-bulb bgicon"></i>
-						</div>
-					</div>
-
-					<div class="col-lg-4 dark col-padding ohidden" style="background-color: #34495e;">
-						<div>
-							<h3 class="uppercase" style="font-weight: 600;">Our Mission</h3>
-							<p style="line-height: 1.8;">Frontline respond, visionary collaborative cities advancement overcome injustice, UNHCR public-private partnerships cause. Giving, country educate rights-based approach; leverage disrupt solution.</p>
-							<a href="#" class="button button-border button-light button-rounded uppercase nomargin">Read More</a>
-							<i class="icon-cog bgicon"></i>
-						</div>
-					</div>
-
-					<div class="col-lg-4 dark col-padding ohidden" style="background-color: #e74c3c;">
-						<div>
-							<h3 class="uppercase" style="font-weight: 600;">What you get</h3>
-							<p style="line-height: 1.8;">Sustainability involvement fundraising campaign connect carbon rights, collaborative cities convener truth. Synthesize change lives treatment fluctuation participatory monitoring underprivileged equal.</p>
-							<a href="#" class="button button-border button-light button-rounded uppercase nomargin">Read More</a>
-							<i class="icon-thumbs-up bgicon"></i>
-						</div>
-					</div>
-
-				</div> -->
 				<div class="clear"></div>
-
 				<div class="section nomargin noborder custom-theme-1" style="color: white;">
 					<div class="heading-block center nobottomborder nobottommargin">
 						<h2>However, there’s a choice between destroying
@@ -130,29 +55,8 @@
 					</div>
 				</div>
 
-				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/healthcarethegame.png');"  data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-					<!-- <div class="vertical-middle">
-						<div class="container clearfix">
+				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/ds2a.png');"  data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 
-							<div class="col_three_fifth nobottommargin">
-
-								<iframe src="http://player.vimeo.com/video/101666580" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-							</div>
-
-							<div class="col_two_fifth col_last nobottommargin">
-
-								<div class="emphasis-title">
-									<h2>Embedded Videos</h2>
-									<p class="lead topmargin-sm">Show off your Vimeo &amp; Videos in style and with a perfect aspect ratio.</p>
-								</div>
-
-								<a href="#" class="button button-border button-rounded button-light button-large">Go to Vimeo</a>
-
-							</div>
-
-						</div>
-					</div> -->
 				</div>
         <div class="section nomargin noborder custom-theme-1">
 					<div class="heading-block center nobottomborder nobottommargin">
@@ -192,6 +96,6 @@
 	<!-- Footer Scripts
 	============================================= -->
 	<script src="js/functions.js"></script>
-
+	<!-- <script src='js/navTransition.js'></script> -->
 </body>
 </html>
