--- a/views/partials/head.mustache
+++ b/views/partials/head.mustache
@@ -15,6 +15,8 @@
 
 	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
+
+	<link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<!-- Document Title
