--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -11,9 +11,13 @@
       </div>
       <div class="col_half col_last tright">
         <div class="fright clearfix">
-          <a href="#" class="social-icon si-small si-borderless si-facebook">
+          <a href="https://www.facebook.com/Joseph-Edgerton-Krauses-Art-Store-Polyurethane-365099660367562/?ref=br_rs" class="social-icon si-small si-borderless si-facebook">
             <i class="icon-facebook"></i>
             <i class="icon-facebook"></i>
+          </a>
+          <a href="#" class="social-icon si-small si-borderless si-instagram">
+            <i class="icon-instagram"></i>
+            <i class="icon-instagram"></i>
           </a>
           <a href="#" class="social-icon si-small si-borderless si-vimeo">
             <i class="icon-vimeo"></i>
