--- a/views/index.mustache
+++ b/views/index.mustache
@@ -21,68 +21,54 @@
 
 			<div class="content-wrap nopadding">
 
-				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/main.jpg');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-
+				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/main1.png');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+					<div class="container  clearfix">
+						<h1 class='custom-text '>Limitations define the process of making something...</h1>
+					</div>
 				</div>
         <!--  aDD DYSNAMIC BACKGROUND IMAGES-->
         <div class="section nomargin noborder custom-theme-1">
 					<div class="heading-block center nobottomborder nobottommargin">
-						<h2>Limitations define the process of making something. Materials can only be
-            cut up so many times until they become dust and and there are only so
+						<h2 class='custom-block-text'>...Materials can only be cut up so many times until they become dust and and there are only so
             many tools available. Materials change as they are used, loosing pieces or
-            getting worn out. As things degrade and spill, these mistakes can always
-           be cut out or covered up.</h2>
+            getting worn out.</h2>
 					</div>
 				</div>
-				<div class="section parallax full-screen nomargin noborder cover" style="background-image: url('art_imgs/background/nobody.jpg');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-					<!-- <div class="container center clearfix">
-
-						<div class="emphasis-title">
-							<h2>Perfect tool for Customization</h2>
-							<p class="lead topmargin-sm">Create as much unique content as you want with this Template which has powerful &amp; optimized code.</p>
-						</div>
-
-						<a href="#" class="button button-border button-rounded button-light button-large">Start Browsing</a>
-						<a href="#" class="button button-rounded button-white button-light button-large">Buy Now</a>
-					</div> -->
+				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/nobody.jpg');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+					<div class='container clearfix'>
+						<h1 class='custom-text right'>As things degrade and spill...</h1>
+					</div>
 				</div>
 				<div class="clear"></div>
 				<div class="section nomargin noborder custom-theme-1" style="color: white;">
 					<div class="heading-block center nobottomborder nobottommargin">
-						<h2>However, there’s a choice between destroying
+						<h2 class='custom-block-text'>these mistakes can always
+           be cut out or covered up. However, there’s a choice between destroying
             and finding value in a unique aspect of whatever happened. Something
             experienced as a limitation becomes an inspiration rather than a deterrent.</h2>
 					</div>
 				</div>
 
 				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/ds2a.png');"  data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-
+					<div class='container clearfix'>
+						<h1 class='custom-text' style='width: 600px'>What around you is unused?</h1>
+					</div>
 				</div>
         <div class="section nomargin noborder custom-theme-1">
 					<div class="heading-block center nobottomborder nobottommargin">
-						<h2>What around you is unused? What is undesirable and can be torn apart into
+						<h2 class='custom-block-text'>What is undesirable and can be torn apart into
             more interesting pieces? Scraps of wood or ink spills hold the value of
-            being something you wouldn’t intentionally create, and trying not to
-            hold tightly onto a preconceived notion of what is expected of your
-            materials can be a useful tool.</h2>
+            being something you wouldn’t intentionally create, </h2>
 					</div>
 				</div>
-				<div class="section parallax dark nomargin noborder cover" style="padding: 150px 0; background-image: url('art_imgs/background/lunarspace.png');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-					<div class="container center clearfix">
-
-						<div class="emphasis-title">
-							<h2>Perfect tool for Customization</h2>
-							<p class="lead topmargin-sm">Create as much unique content as you want with this Template which has powerful &amp; optimized code.</p>
-						</div>
-
-						<a href="#" class="button button-border button-rounded button-light button-large">Start Browsing</a>
-						<a href="#" class="button button-rounded button-white button-light button-large">Buy Now</a>
-
+				<div class="section parallax dark nomargin noborder cover" style="padding: 150px 0; background-image: url('art_imgs/background/resinman.png');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+					<div class="container clearfix">
+						<!-- <h1 class='custom-text right'>and trying not to
+						hold tightly onto a preconceived notion of what is expected of your
+						materials can be a useful tool.</h1> -->
 					</div>
 				</div>
-
 			</div>
-
 		</section><!-- #content end -->
 
     {{> footer }}
