--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -24,10 +24,10 @@
 
         <ul>
           <li><a href="/index"><div class='custom-menu-item custom-current'>Statement</div></a></li>
-          <li><a href="/gallery"><div class='custom-menu-item'>Galleires</div></a>
+          <li><a href="/galleries"><div class='custom-menu-item'>Galleires</div></a>
             <ul class='custom-sub-menu'>
               {{# galleries}}
-              <li><a class='custom-sub-menu-item' href="/galleries/{{name}}"><div>{{name}}</div></a></li>
+              <li><a class='custom-sub-menu-item' href="/gallery/{{name}}"><div>{{name}}</div></a></li>
               {{/ galleries}}
             </ul>
           </li>
