layout for contact page

--- a/views/galleries.mustache
+++ b/views/galleries.mustache
@@ -14,7 +14,7 @@
 		<!-- Page Sub Menu
 		============================================= -->
 		<div id="page-menu" class="no-sticky">
-			<div id="page-menu-wrap">
+			<div id="page-menu-wrap" class='custom-page-banner'>
 				<div class="container clearfix">
 					<div class="menu-title"><span>galleries</span></div>
 				</div>
