--- a/views/partials/head.mustache
+++ b/views/partials/head.mustache
@@ -21,6 +21,6 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Home - Parallax | Canvas</title>
+	<title>{{title}}</title>
 
 </head>
