--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -37,19 +37,19 @@
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Art</div></a></li>
             </ul>
           </li>
-          <li><a href="index.html"><div class='custom-menu-item'>Media</div></a>
+          <li><a href="/media"><div class='custom-menu-item'>Media</div></a>
             <ul class='custom-sub-menu'>
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Photography</div></a></li>
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Video</div></a></li>
             </ul>
           </li>
-          <li><a href="index.html"><div class='custom-menu-item'>Events</div></a>
+          <li><a href="/events"><div class='custom-menu-item'>Events</div></a>
             <ul class='custom-sub-menu'>
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Upcoming</div></a></li>
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Past</div></a></li>
             </ul>
           </li>
-          <li><a href="index.html"><div class='custom-menu-item'>Contact</div></a></li>
+          <li><a href="/contact"><div class='custom-menu-item'>Contact</div></a></li>
 
         </ul>
 
