--- a/views/contact.mustache
+++ b/views/contact.mustache
@@ -34,51 +34,52 @@
 
         <h3>Send me an Email</h3>
 
-        <div class="contact-widget">
+        <div>
 
           <div class="contact-form-result"></div>
 
-          <form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/sendemail.php" method="post">
+          <form class="nobottommargin" id="template-contactform" name=
+					"template-contactform" action="/contact" method="post">
 
             <div class="form-process"></div>
 
             <div class="col_one_third">
-              <label for="template-contactform-name">Name <small>*</small></label>
-              <input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control required" />
+              <label for="name">Name <small>*</small></label>
+              <input type="text" id="name" name="name" value="" class="sm-form-control required" />
             </div>
 
             <div class="col_one_third">
-              <label for="template-contactform-email">Email <small>*</small></label>
-              <input type="email" id="template-contactform-email" name="template-contactform-email" value="" class="required email sm-form-control" />
+              <label for="email">Email <small>*</small></label>
+              <input type="email" id="temail" name="email" value="" class="required email sm-form-control" />
             </div>
 
             <div class="clear"></div>
 
             <div class="col_two_third">
-              <label for="template-contactform-subject">Subject <small>*</small></label>
-              <input type="text" id="template-contactform-subject" name="template-contactform-subject" value="" class="required sm-form-control" />
+              <label for="subject">Subject <small>*</small></label>
+              <input type="text" id="subject" name="subject" value="" class="required sm-form-control" />
             </div>
 
             <div class="clear"></div>
 
             <div class="col_full">
-              <label for="template-contactform-message">Message <small>*</small></label>
-              <textarea class="required sm-form-control" id="template-contactform-message" name="template-contactform-message" rows="6" cols="30"></textarea>
+              <label for="message">Message <small>*</small></label>
+              <textarea class="required sm-form-control" id="message" name="message" rows="6" cols="30"></textarea>
             </div>
 
             <div class="col_full hidden">
-              <input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
+              <input type="text" id="botcheck" name="botcheck" value="" class="sm-form-control" />
             </div>
 
-            <div class="col_full">
+            <!-- <div class="col_full">
 
               <script src="https://www.google.com/recaptcha/api.js" async defer></script>
               <div class="g-recaptcha" data-sitekey="6LfijgUTAAAAACPt-XfRbQszAKAJY0yZDjjhMUQT"></div>
 
-            </div>
+            </div> -->
 
             <div class="col_full">
-              <button class="button button-3d nomargin custom-page-banner" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">Send Message</button>
+              <button class="button nomargin custom-page-banner" type="submit" id="template-contactform-submit" name="contact" value="submit">Send Message</button>
             </div>
 
           </form>
