--- a/views/index.mustache
+++ b/views/index.mustache
@@ -21,9 +21,9 @@
 
 			<div class="content-wrap nopadding">
 
-				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/main1.png');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('/art_imgs/background/main1.png');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 					<div class="container  clearfix">
-						<h1 class='custom-text '>Limitations define the process of making something...</h1>
+						<h1 class='custom-text h1 t700' data-animate="fadeInUp">Limitations define the process of making something...</h1>
 					</div>
 				</div>
         <!--  aDD DYSNAMIC BACKGROUND IMAGES-->
@@ -34,9 +34,9 @@
             getting worn out.</h2>
 					</div>
 				</div>
-				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/nobody.jpg');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('/art_imgs/background/nobody.jpg');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 					<div class='container clearfix'>
-						<h1 class='custom-text right'>As things degrade and spill...</h1>
+						<h1 class='custom-text right h1 t700' data-animate="fadeInUp">As things degrade and spill...</h1>
 					</div>
 				</div>
 				<div class="clear"></div>
@@ -49,9 +49,9 @@
 					</div>
 				</div>
 
-				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('art_imgs/background/ds2a.png');"  data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+				<div class="section parallax full-screen dark nomargin noborder cover" style="background-image: url('/art_imgs/background/ds2a.png');"  data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 					<div class='container clearfix'>
-						<h1 class='custom-text' style='width: 600px'>What around you is unused?</h1>
+						<h1 class='custom-text h1 t700' data-animate="fadeInUp" style='width: 600px'>What around you is unused?</h1>
 					</div>
 				</div>
         <div class="section nomargin noborder custom-theme-1">
@@ -61,7 +61,7 @@
             being something you wouldn’t intentionally create, </h2>
 					</div>
 				</div>
-				<div class="section parallax dark nomargin noborder cover" style="padding: 150px 0; background-image: url('art_imgs/background/resinman.png');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+				<div class="section parallax dark nomargin noborder cover" style="padding: 150px 0; background-image: url('/art_imgs/background/resinman.png');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 					<div class="container clearfix">
 						<!-- <h1 class='custom-text right'>and trying not to
 						hold tightly onto a preconceived notion of what is expected of your
@@ -76,12 +76,12 @@
 
 	<!-- External JavaScripts
 	============================================= -->
-	<script src="js/jquery.js"></script>
-	<script src="js/plugins.js"></script>
+	<script src="/js/jquery.js"></script>
+	<script src="/js/plugins.js"></script>
 
 	<!-- Footer Scripts
 	============================================= -->
-	<script src="js/functions.js"></script>
+	<script src="/js/functions.js"></script>
 	<!-- <script src='js/navTransition.js'></script> -->
 </body>
 </html>
