--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -65,6 +65,11 @@
   background: #25bdc7d9 !important;
 }
 
+.flex-center{
+  display: flex;
+  align-items: center;
+}
+
 .cover{
   background-size: cover;
   height: 70vh !important;
@@ -73,7 +78,6 @@
 .custom-text{
   font-weight: 900 !important;
   font-size: 50px !important;
-  margin-top: 12vh !important;
   width: 800px;
   transition: .2s;
 }
