added process structure and photos

--- a/views/galleries.mustache
+++ b/views/galleries.mustache
@@ -13,8 +13,8 @@
 		{{>nav }}
 		<!-- Page Sub Menu
 		============================================= -->
-		<div id="page-menu" class="no-sticky">
-			<div id="page-menu-wrap" class='custom-page-banner'style="position: fixed; width: 100%;">
+		<div id="page-menu" class="no-sticky" style="background: #1b1b1b">
+			<div id="" class='custom-page-banner'style="position: fixed; width: 100%;">
 				<div class="container clearfix">
 					<div style="padding-left: 10px;"class="menu-title"><span>galleries</span></div>
 				</div>
@@ -23,7 +23,7 @@
 
 		<!-- Content
 		============================================= -->
-		<section id="content">
+		<section id="content" style="width:100%;">
 
 			<div class="content-wrap custom-background">
 
