--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -10,7 +10,7 @@
 
       <!-- Logo
       ============================================= -->
-      <div id="logo" style="display: flex">
+      <div id="logo" style="display: flex; margin-right: 0; transition: .1s;">
         <a href="/" class="standard-logo" data-dark-logo="images/logo-dark.png"><img  style='padding: 10px;' src="/art_imgs/face.png" alt=""></a>
         <div class='custom-title'>
           <div><a href="/">Joseph Edgerton Krause</a></div>
@@ -36,10 +36,10 @@
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Art</div></a></li>
             </ul>
           </li>
-          <li><a href="/media"><div class='custom-menu-item'>Media</div></a>
+          <li><a href="/process"><div class='custom-menu-item'>Process</div></a>
             <ul class='custom-sub-menu'>
-              <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Photography</div></a></li>
-              <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Video</div></a></li>
+              <li><a class='custom-sub-menu-item' href="process/photos"><div>Photos</div></a></li>
+              <li><a class='custom-sub-menu-item' href="process/videos"><div>Videos</div></a></li>
             </ul>
           </li>
           <li><a href="/events"><div class='custom-menu-item'>Events</div></a>
