--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -67,7 +67,7 @@ a {
 .custom-page-banner{
   background: #1b1b1b!important;
   text-transform: uppercase;
-  font-size: 15px !important;
+  font-size: 10px !important;
   letter-spacing: .08em;
 }
 
@@ -131,7 +131,10 @@ a {
   opacity: 0;
 }
 
-@media screen and (max-width: 1200px){
+.custom-fixed{
+  position: fixed;
+}
+@media screen and (max-width: 1300px){
   .custom-title{
     font-size: 20px;
   }
@@ -152,6 +155,10 @@ a {
 
     .custom-theme-1{
       padding: 2px !important;
+    }
+
+    .custom-fixed{
+      position: relative;
     }
 }
 @media screen and (max-width: 450px){
@@ -224,6 +231,7 @@ a {
     opacity: .7;
   }
 }
+
 
 .custom-image-title{
   color: white !important;
