--- a/views/contact.mustache
+++ b/views/contact.mustache
@@ -12,8 +12,8 @@
 		============================================= -->
 		{{>nav }}
 
-<div id="page-menu" class="no-sticky">
-  <div id="page-menu-wrap" class='custom-page-banner'>
+<div id="page-menu" class="no-sticky" style="background: #1b1b1b">
+	<div id="" class='custom-page-banner'style="position: fixed; width: 100%;">
     <div class="container clearfix">
       <div class="menu-title">Contact <span>Options</span></div>
     </div>
@@ -32,7 +32,7 @@
       ============================================= -->
       <div class="postcontent nobottommargin">
 
-        <h3>Send me an Email</h3>
+        <h3>Send me an email</h3>
 
         <div>
 
