--- a/views/gallery.mustache
+++ b/views/gallery.mustache
@@ -13,8 +13,8 @@
 		{{>nav }}
 		<!-- Page Sub Menu
 		============================================= -->
-		<div id="page-menu" class="no-sticky">
-			<div id="page-menu-wrap" class='custom-page-banner'style="position: fixed; width: 100%;">
+		<div id="page-menu" class="no-sticky" style="background: #1b1b1b">
+			<div id="" class='custom-page-banner'style="position: fixed; width: 100%;">
 				<div class="container clearfix">
 					<div style="padding-left: 10px;"class="menu-title"><a href="/galleries">galleries</a>
 					<img style="margin:5px;"src="/images/icons/submenu.png" /><span>{{galleryName}}</span></div>
