--- a/views/statement.mustache
+++ b/views/statement.mustache
@@ -9,8 +9,8 @@
 	<div id="wrapper" class="clearfix">
 
     {{> nav }}
-    <div id="page-menu" class="no-sticky">
-      <div id="page-menu-wrap" class='custom-page-banner' style="position: fixed; width: 100%;">
+    <div id="page-menu" class="no-sticky" style="background: #1b1b1b">
+      <div id="" class='custom-page-banner'style="position: fixed; width: 100%;">
         <div class="container clearfix">
           <div style="padding-left: 10px;"class="menu-title"><span>statement</span></div>
       </div>
