added events page

--- a/views/error.mustache
+++ b/views/error.mustache
@@ -1,3 +1,53 @@
-<h1>{{ message }}</h1>
-<h2>{{ error.status }}</h2>
-<pre>{{ error.stack }}</pre>
+<!DOCTYPE html>
+<html dir="ltr" lang="en-US">
+{{> head }}
+
+<body class="stretched">
+
+	<!-- Document Wrapper
+	============================================= -->
+	<div class='fadeToBlack'>
+
+	</div>
+	<div id="wrapper" class="clearfix">
+
+    {{> nav }}
+		<section id="content">
+
+			<div class="content-wrap custom-background">
+
+        <div class="container clearfix">
+
+					<div class="col_half nobottommargin">
+						<div class="error404 center">404</div>
+            <div class="heading-block nobottomborder">
+							<h4 style='color:white'>I don't know what you're looking for</h4>
+						</div>
+
+					</div>
+
+					<div class="col_half nobottommargin col_last">
+
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</section>
+
+    {{> footer }}
+	</div><!-- #wrapper end -->
+
+  	<!-- External JavaScripts
+  	============================================= -->
+  	<script src="js/jquery.js"></script>
+  	<script src="js/plugins.js"></script>
+
+  	<!-- Footer Scripts
+  	============================================= -->
+  	<script src="js/functions.js"></script>
+  	<!-- <script src='js/navTransition.js'></script> -->
+  </body>
+  </html>
