--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -7,7 +7,7 @@
   <div id="copyrights">
     <div class="container clearfix">
       <div class="col_half">
-        Copyrights &copy; 2018 All Rights Reserved by Joseph Edgerton Krause
+        &copy; 2018 All Rights Reserved by Joseph Edgerton Krause
       </div>
       <div class="col_half col_last tright">
         <div class="fright clearfix">
