--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -30,23 +30,18 @@
               {{/ galleries}}
             </ul>
           </li>
-          <li><a href="index.html"><div class='custom-menu-item'>Shop</div></a>
+          <!-- <li><a href="index.html"><div class='custom-menu-item'>Shop</div></a> -->
             <ul class='custom-sub-menu'>
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Prints</div></a></li>
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Art</div></a></li>
             </ul>
           </li>
-          <li><a href="/process"><div class='custom-menu-item'>Process</div></a>
-            <ul class='custom-sub-menu'>
-              <li><a class='custom-sub-menu-item' href="process/photos"><div>Photos</div></a></li>
-              <li><a class='custom-sub-menu-item' href="process/videos"><div>Videos</div></a></li>
-            </ul>
-          </li>
+          <li><a href="/process"><div class='custom-menu-item'>Process</div></a></li>
           <li><a href="/events"><div class='custom-menu-item'>Events</div></a>
-            <ul class='custom-sub-menu'>
+            <!-- <ul class='custom-sub-menu'>
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Upcoming</div></a></li>
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Past</div></a></li>
-            </ul>
+            </ul> -->
           </li>
           <li><a href="/contact"><div class='custom-menu-item'>Contact</div></a></li>
 
